--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 </nav>
 <!--Content -->
 	<div id="content" class="container" style ="text-align:center;">
-		<object data="CV.pdf" type="application/pdf" width="100%" height="1000px">
+		<embed src="CV.pdf" width="100%" height="1000px">
 	</div>
 <!--Footer -->
       <footer class="footer">
